# KVStore-

./: .gitignore  README.md
docker/: docker-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
gateway/: Dockerfile  gateway.py  hash_ring.py
server/: CMakeLists.txt  Dockerfile  benchmark.py
server/src/: main.cpp  protocol.h  striped_hashmap.h
